--- a/assets/style/home-page.css
+++ b/assets/style/home-page.css
@@ -1,7 +1,7 @@
 body {
-    background-color: #FEE5D4;
+    background-color: white;
 }
-#nav-bar-tags>a {
+#nav-bar-tags>span {
     margin-right: 25px; /* Adjust this value to set the space between anchor tags */
     margin-top: 10px;
     font-family: "Lexend", sans-serif;
@@ -13,20 +13,11 @@ body {
     margin-right: 50px;
 }
 
-#current-page-button {
-    background-color: #174951;
-    color: #FFEEE2;
-    padding: 18px 28px;
-    border-radius: 30px;
-    text-decoration: none;
-    font-weight: 1000;
-}
-
 .Orders,
 .Customers,
 .Items {
     display: inline-block;
-    color: #174951;
+    color: #1e2529;
     padding: 18px 28px;
     border-radius: 30px;
     text-decoration: none;
@@ -37,25 +28,25 @@ body {
 .Orders:hover,
 .Customers:hover,
 .Items:hover {
-    background-color: #174951;
-    color: #FEE5D4;
+    background-color: #1e2529;
+    color: white;
 }
 
 footer {
     height: 110px;
     width: 100%;
-    color: #FEE5D4;
-    background-color: #174951;
+    color: white;
+    background-color: #1e2529;
     text-align: center;
 }
 footer>p {
     margin-bottom: 8px;
 }
 
-#main-section {
+#home-main-section {
     width: 70vw;
-    height: 70vh;
-    background-color: #FFF4ED;
+    height: 675px;
+    background-color: white;
     position: relative;
     text-align: center;
     left: 0;
@@ -64,20 +55,19 @@ footer>p {
     margin-right: 15px; /* Reset margin-right */
     border-radius: 30px;
     padding: 20px; /* Add padding to prevent content from sticking to edges */
-}
-#main-section>label {
-    font-size: x-large;
-    font-style: italic;
-}
+}  #home-main-section>label {
+       font-size: x-large;
+       font-style: italic;
+   }
 
-#sub-section {
+#home-sub-section {
     width: 28vw;
-    height: 70vh;
+    height: 690px;
     position: absolute;
     padding: 20px;
 }
 
-#container {
+#container-home-section {
     position: relative;
     padding-bottom: 47px; /* Height of the footer */
 }
@@ -85,8 +75,8 @@ footer>p {
 #card1,#card2,#card3,#card4 {
     height: 140px;
     position: relative;
-    border: 3px solid #174951;
-    background-color: #FEE5D4;
+    border: 3px solid #1e2529;
+    background-color: white;
     border-radius: 20px;
     text-align: center;
 }
@@ -95,7 +85,7 @@ footer>p {
 #card2>div>img,
 #card3>div>img,
 #card4>div>img,
-#middle-card>img {
+#home-middle-card>img {
     position: absolute;
     top: 0;
     left: 0;
@@ -104,11 +94,11 @@ footer>p {
     margin: auto;
 }
 
-#middle-card {
+#home-middle-card {
     width: 300px;
     height: 180px;
-    border: 3px solid #174951;
-    background-color: #FEE5D4;
+    border: 3px solid #1e2529;
+    background-color: white;
     border-radius: 20px;
     position: absolute;
     text-align: center;
@@ -126,26 +116,82 @@ footer>p {
 
 label {
     font-family: "Lexend", sans-serif;
-    color: #174951;
+    color: #1e2529;
     font-weight: 900;
 }
-#middle-card>label {
+
+#totalOrdersHomePage {
+    width: fit-content;
+    height: fit-content;
+    font-size: 22px;
+    position: absolute;
+    top: 100px;
+    right: 20px;
+    left: 0;
+    margin: auto;
+}
+
+#totalTodayOrdersHomePage {
+    width: fit-content;
+    height: fit-content;
+    font-size: 22px;
+    position: absolute;
+    top: 100px;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+
+#totalSales {
+    width: fit-content;
+    height: fit-content;
+    font-size: 28px;
+    position: absolute;
+    top: 120px;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+
+#totalItemsHome {
+    width: fit-content;
+    height: fit-content;
+    font-size: 22px;
+    position: absolute;
+    top: 100px;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+
+#totalCustomersHome {
+    width: fit-content;
+    height: fit-content;
+    font-size: 22px;
+    position: absolute;
+    top: 100px;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+
+#home-middle-card>label {
     margin-top: 15px;
     font-size: 22px;
 }
 table.table-bordered > thead > tr > th{
-    border:2px solid #174951;
-    background-color: #FEE5D4;
-    color: #174951;
+    border:2px solid #1e2529;
+    background-color: white;
+    color: #1e2529;
     text-align: center;
     font-weight: 950;
 }
 table.table-bordered > tbody {
-    border:2px solid #174951;
+    border:2px solid #1e2529;
     text-align: center;
 }
 table.table.table-bordered > tbody > tr > td {
-    color: #174951;
+    color: #1e2529;
 }
 #Tbl {
     position: relative;
@@ -153,39 +199,39 @@ table.table.table-bordered > tbody > tr > td {
 }
 
 @media all and (max-width: 1440px) {
-    #main-section {
+    #home-main-section {
         width: 63vw;
     }
 
-    #sub-section {
+    #home-sub-section {
         width: 35vw;
     }
 }
 
 @media all and (max-width: 1333px) {
-    #main-section {
+    #home-main-section {
         width: 60vw;
     }
 
-    #sub-section {
+    #home-sub-section {
         width: 38vw;
     }
 }
 
 @media all and (max-width: 1024px) {
 
-    #container {
-        height: 155vh;
+    #container-home-section {
+        height: 1550px;
         position: relative;
         padding-bottom: 47px; /* Height of the footer */
     }
 
-    #main-section {
-        top: 80vh;
+    #home-main-section {
+        top: 800px;
         width: 94vw;
     }
 
-    #sub-section {
+    #home-sub-section {
         width: 90vw;
         left: 5vw;
     }
@@ -194,69 +240,72 @@ table.table.table-bordered > tbody > tr > td {
 
 @media all and (max-width: 990px) {
 
-    #container {
-        height: 155vh;
+    #container-home-section {
+        height: 1550px;
         position: relative;
         padding-bottom: 47px; /* Height of the footer */
     }
 
-    #main-section {
-        top: 80vh;
+    #home-main-section {
+        top: 800px;
         width: 94vw;
     }
 
-    #sub-section {
+    #home-sub-section {
         width: 90vw;
         left: 5vw;
+    }
+    footer {
+        position: absolute;
     }
 }
 
 @media all and (max-width: 764px) {
 
-    #container {
-        height: 155vh;
+    #container-home-section {
+        height: 1550px;
         position: relative;
         padding-bottom: 47px; /* Height of the footer */
     }
 
-    #main-section {
-        top: 80vh;
+    #home-main-section {
+        top: 800px;
         width: 94vw;
     }
 
-    #sub-section {
+    #home-sub-section {
         width: 90vw;
         left: 5vw;
     }
 }
 
 @media all and (max-width: 580px) {
-    #container {
-        height: 180vh;
+    #container-home-section {
+        height: 1440px;
         position: relative;
         padding-bottom: 47px; /* Height of the footer */
     }
 
-    #main-section {
-        top: 105vh;
+    #home-main-section {
+        top: 720px;
         width: 94vw;
     }
 
-    #sub-section {
-        height: 105vh;
+    #home-sub-section {
+        height: 680px;
         width: 90vw;
         left: 5vw;
     }
 }
 
 @media all and (max-width: 425px) {
-    #container {
-        height: 185vh;
+    #container-home-section {
+        height: 1730px;
         position: relative;
         padding-bottom: 47px; /* Height of the footer */
     }
 
-    #middle-card {
+    #home-middle-card {
         top: 0;
         left: 0;
         bottom: 100px;
@@ -264,14 +313,14 @@ table.table.table-bordered > tbody > tr > td {
         margin: auto;
     }
 
-    #main-section {
-        top: 105vh;
+    #home-main-section {
+        top: 940px;
         width: 94vw;
-        height: 74vh;
+        height: 740px;
     }
 
-    #sub-section {
-        height: 105vh;
+    #home-sub-section {
+        height: 990px;
         width: 90vw;
         left: 5vw;
     }
