--- a/assets/style/orders-page.css
+++ b/assets/style/orders-page.css
@@ -1,5 +1,5 @@
 body {
-    background-color: white;
+    background-color: #1e2529;
 }
 #nav-bar-tags>a {
     margin-right: 25px; /* Adjust this value to set the space between anchor tags */
